^e: downgrade to JDK 22 with enable-preview to have String templates (even though they were removed in >=23)