@@ -11,7 +11,7 @@
         <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
-        <java.version>23</java.version>
+        <java.version>22</java.version>
         <kotlin.version>2.1.10</kotlin.version>
         <coroutines.version>1.10.1</coroutines.version>
         <jackson.version>2.18.3</jackson.version>
@@ -136,6 +136,7 @@
                         <release>${java.version}</release>
 
                         <compilerArgs>
+                            <arg>--enable-preview</arg>
                             <arg>-XDcompilePolicy=simple</arg>
                             <arg>
                                 -Xplugin:ErrorProne
